<resources>
    <string name="app_name">FlightInfo</string>
    <string name="departure_airport">Вылет из Аэропорта</string>
    <string name="arrival_airport">Прилет в Аэропорт</string>
    <string name="number_of_transfers">Кол-во пересадок:</string>
    <string name="rub">руб.</string>
    <string name="from">от</string>
    <string name="flight_class">Класс:</string>
    <string name="cost">Стоимость:</string>
    <string name="departure">Вылет:</string>
    <string name="arrival">Прилет:</string>
    <string name="transfer">Пересадка</string>
    <string name="get_a_list_of_flights">Получить список направлений</string>
    <string name="apply">ПРИМЕНИТЬ</string>
    <string name="it_is_necessary_to_choose_a_flight_class">Необходимо выбрать класс полета</string>
</resources>